--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,4 +14,5 @@ spring.mvc.pathmatch.match.matching-strategy=ant_path_matcher
 
 spring.resource.static-locations=classpath:/static/
 
+jwt.secret=laskdjfl239rupaef;a;dlfa;sjdlkaklhgh93u039u41ofjalksdlkHHJFJKKDHOIeur9u0394u3;;gLIEIFIHIelsalkdllfa
 
