--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,5 +14,5 @@ spring.mvc.pathmatch.match.matching-strategy=ant_path_matcher
 
 spring.resource.static-locations=classpath:/static/
 
-jwt.secret=laskdjfl239rupaef;a;dlfa;sjdlkaklhgh93u039u41ofjalksdlkHHJFJKKDHOIeur9u0394u3;;gLIEIFIHIelsalkdllfa
+jwt.secret=bXktc2VjcmV0LWtleS13aGljaC1pcy1sb25nLWVub3VnaC0zMmJ5dGU=
 
