--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,4 @@ spring.resource.static-locations=classpath:/static/
 
 jwt.secret=bXktc2VjcmV0LWtleS13aGljaC1pcy1sb25nLWVub3VnaC0zMmJ5dGU=
 
+spring.resources.static-locations=classpath:/static/
