--- a/src/main/Insurance/package.json
+++ b/src/main/Insurance/package.json
@@ -15,6 +15,9 @@
     "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
     "axios": "^1.10.0",
+    "bootstrap": "^5.3.7",
+    "html2pdf.js": "^0.10.3",
+    "pdf-lib": "^1.17.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.3",
