--- a/src/main/Insurance/package.json
+++ b/src/main/Insurance/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
+    "@react-oauth/google": "^0.12.2",
     "axios": "^1.10.0",
     "bootstrap": "^5.3.7",
     "html2pdf.js": "^0.10.3",
@@ -21,6 +22,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.3",
+    "react-toastify": "^11.0.5",
     "recoil": "^0.7.7",
     "styled-components": "^6.1.19"
   },
