--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,16 @@ spring.resource.static-locations=classpath:/static/
 jwt.secret=bXktc2VjcmV0LWtleS13aGljaC1pcy1sb25nLWVub3VnaC0zMmJ5dGU=
 
 spring.resources.static-locations=classpath:/static/
+
+# OAuth2 Configuration for Google
+# YOUR_GOOGLE_CLIENT_ID  = placeholder value
+spring.security.oauth2.client.registration.google.client-id=460735470135-fpmdi8monh8hph0geujm2iqp3g75kdk3.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=GOCSPX-vDzjlLHvVMYolrbkDA8RxOsGOmF
+spring.security.oauth2.client.registration.google.scope=email,profile
+spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/login/oauth2/code/google
+spring.security.oauth2.client.registration.google.client-name=Google
+spring.security.oauth2.client.registration.google.authorization-grant-type=authorization_code
+spring.security.oauth2.client.provider.google.authorization-uri=https://accounts.google.com/o/oauth2/auth
+spring.security.oauth2.client.provider.google.token-uri=https://oauth2.googleapis.com/token
+spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleapis.com/oauth2/v3/userinfo
+spring.security.oauth2.client.provider.google.user-name-attribute=sub
