--- a/src/main/Insurance/package.json
+++ b/src/main/Insurance/package.json
@@ -18,6 +18,8 @@
     "axios": "^1.10.0",
     "bootstrap": "^5.3.7",
     "html2pdf.js": "^0.10.3",
+    "jwt-decode": "^4.0.0",
+    "moment": "^2.30.1",
     "pdf-lib": "^1.17.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
