--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,8 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 /src/main/resources/static/
-
+!/src/main/resources/static/csv/
+!/src/main/resources/static/csv/**
 application.properties
 
 ### STS ###
